index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -34,33 +34,35 @@
             charCount.textContent = anmoInput.value.length + ' Zeichen';
         });
 
-        function generateXML() {
-  const text = anmoInput.value.trim();
-  const xml = `<?xml version="1.0" encoding="UTF-8"?>\n<anmoderation-analyse version="1.0">\n
+        function generateTranskriptXML() {
+  const text = transkriptInput.value.trim();
+  const xml = `<?xml version="1.0" encoding="UTF-8"?>\n<transkript-analyse version="1.0">\n
   <anweisung-fuer-ki><![CDATA[
-    Bitte analysiere nur den Originaltext. Gib mir die folgenden Punkte strukturiert aus:
+    Bitte analysiere das folgende Transkript eines TV-Beitrags. Gib mir direkt die Ergebnisse aus Schritt 2 bis 5 aus:
 
-    - Schritt 2: Sprachliche & inhaltliche Analyse (Zeit, Ort, Personen, Handlung, Kontext, Stil)
-    - Schritt 3: Zentrale Fakten (konkrete Informationen in Stichpunkten)
-    - Schritt 4: Zentrales Thema (kurz, allgemein gefasst)
-    - Schritt 5: Informative Absicht (Was will der Beitrag erreichen?)
-    - Schritt 6: Prognose – Worum könnte es im Beitrag gehen?
+    - Schritt 2: Zentrale Fakten (kompakt in Stichpunkten, objektiv und belegbar)
+    - Schritt 3: Zentrales Thema (in einem Satz, kein Zitat, keine wörtliche Rede)
+    - Schritt 4: Informative Absicht (journalistische Zielsetzung des Beitrags, sachlich formuliert)
+    - Schritt 5: Beteiligte Personen oder Institutionen (Rollen, Funktionen, Namen – soweit im Text genannt)
 
-    Gib die Ergebnisse jeweils mit Abschnittsüberschriften aus. Keine erfundenen Inhalte, nur belegbares aus dem Text. Keine XML-Ausgabe – nur Klartext.
+    Verwende nur belegbare Informationen aus dem Text. Keine erfundenen Inhalte. Keine XML-Ausgabe. Nur Klartext-Ausgabe.
   ]]></anweisung-fuer-ki>\n
-  <quelle>\n    <textart>TV-Anmoderation</textart>\n    <originaltext><![CDATA[\n${text}\n    ]]></originaltext>\n  </quelle>\n
+  <quelle>\n    <textart>TV-Transkript</textart>\n    <originaltext><![CDATA[\n${text}\n    ]]></originaltext>\n  </quelle>\n
   <struktur>\n
-    <analyse>\n
-      <sprachlich-inhaltlich><![CDATA[\n        <!-- Schritt 2: Zeit, Ort, Personen, Handlung, Kontext, Stil -->\n      ]]></sprachlich-inhaltlich>\n
-      <zentrale-fakten><![CDATA[\n        <!-- Schritt 3: Alle belegbaren Informationen in Stichpunkten -->\n      ]]></zentrale-fakten>\n
-      <zentrales-thema><![CDATA[\n        <!-- Schritt 4: Übergeordnetes Thema in einem Satz -->\n      ]]></zentrales-thema>\n
-      <intention-des-beitrags><![CDATA[\n        <!-- Schritt 5: Welche Absicht verfolgt der Beitrag? -->\n      ]]></intention-des-beitrags>\n
-      <vermuteter-inhalt><![CDATA[\n        <!-- Schritt 6: Worum könnte es im Beitrag konkret gehen? -->\n      ]]></vermuteter-inhalt>\n
-    </analyse>\n
+    <gliederung>\n      <abschnitt1><![CDATA[Einleitung / Anmoderation]]></abschnitt1>\n      <abschnitt2><![CDATA[Hauptteil mit O-Tönen / Berichten]]></abschnitt2>\n      <abschnitt3><![CDATA[Ausblick / Fazit / Schlussbild]]></abschnitt3>\n    </gliederung>\n
+    <zeitbezug>\n      <zeitpunkt><![CDATA[Vergangenheit, Gegenwart, Zukunft (je nach Inhalt markieren)]]></zeitpunkt>\n    </zeitbezug>\n
+    <raumbereich>\n      <ort><![CDATA[Ort(e) der Handlung / des Beitrags – wenn vorhanden]]></ort>\n    </raumbereich>\n
+    <themenschwerpunkt>\n      <beschreibung><![CDATA[Hauptthema des Beitrags, übergeordnetes Themafeld]]></beschreibung>\n    </themenschwerpunkt>\n
   </struktur>\n
-</anmoderation-analyse>`;
+  <auswertung>\n
+    <schritt2>\n      <zentrale_fakten><![CDATA[\n        <!-- Objektive Kerninformationen in Stichpunkten -->\n      ]]></zentrale_fakten>\n    </schritt2>\n
+    <schritt3>\n      <zentrales_thema><![CDATA[\n        <!-- Thema in einem prägnanten Satz -->\n      ]]></zentrales_thema>\n    </schritt3>\n
+    <schritt4>\n      <informative_absicht><![CDATA[\n        <!-- Was will der Beitrag vermitteln oder erreichen? -->\n      ]]></informative_absicht>\n    </schritt4>\n
+    <schritt5>\n      <beteiligte_personen><![CDATA[\n        <!-- Wer kommt vor? (mit Rolle/Funktion) -->\n      ]]></beteiligte_personen>\n    </schritt5>\n
+  </auswertung>\n
+</transkript-analyse>`;
 
-  xmlOutput.value = xml;
+  transkriptXMLOutput.value = xml;
         }
 
         function copyToClipboard() {
