--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Anmoderation zu XML</title>
+    <title>Transkript zu XML</title>
     <style>
         body { font-family: Arial, sans-serif; padding: 20px; max-width: 960px; margin: auto; }
         textarea { width: 100%; height: 200px; margin-top: 5px; font-family: monospace; }
@@ -12,9 +12,9 @@
     </style>
 </head>
 <body>
-    <h1>Anmoderation zu XML (Strukturanalyse + Auswertungsschritte)</h1>
-    <label for="anmoderation">Anmoderation <span id="charCount">0 Zeichen</span></label>
-    <textarea id="anmoderation" placeholder="Geben Sie hier den Originaltext der Anmoderation ein..."></textarea>
+    <h1>Transkript zu XML (Strukturanalyse + Auswertungsschritte)</h1>
+    <label for="transkript">Transkript <span id="charCount">0 Zeichen</span></label>
+    <textarea id="anmoderation" placeholder="Geben Sie hier den Originaltext des Transkriptes ein..."></textarea>
 
     <div class="button-group">
         <button onclick="generateXML()">XML für die KI generieren</button>
@@ -26,7 +26,7 @@
     <textarea id="xmlOutput" placeholder="Hier erscheint das generierte XML..."></textarea>
 
     <script>
-        const anmoInput = document.getElementById('anmoderation');
+        const anmoInput = document.getElementById('transkript');
         const xmlOutput = document.getElementById('xmlOutput');
         const charCount = document.getElementById('charCount');
 
@@ -75,7 +75,7 @@
             const url = URL.createObjectURL(blob);
             const a = document.createElement('a');
             a.href = url;
-            a.download = 'anmoderation-analyse.xml';
+            a.download = 'transkript-analyse.xml';
             a.click();
             URL.revokeObjectURL(url);
         }
