--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <h1>Transkript zu XML (Strukturanalyse + Auswertungsschritte)</h1>
     <label for="transkript">Transkript <span id="charCount">0 Zeichen</span></label>
-    <textarea id="anmoderation" placeholder="Geben Sie hier den Originaltext des Transkriptes ein..."></textarea>
+    <textarea id="transkript" placeholder="Geben Sie hier den Originaltext des Transkriptes ein..."></textarea>
 
     <div class="button-group">
         <button onclick="generateXML()">XML für die KI generieren</button>
