index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             charCount.textContent = anmoInput.value.length + ' Zeichen';
         });
 
-        function generateTranskriptXML() {
+        function generateXML() {
   const text = transkriptInput.value.trim();
   const xml = `<?xml version="1.0" encoding="UTF-8"?>\n<transkript-analyse version="1.0">\n
   <anweisung-fuer-ki><![CDATA[
