--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Transkript zu XML</title>
+    <title>Transkript zu XML2</title>
     <style>
         body { font-family: Arial, sans-serif; padding: 20px; max-width: 960px; margin: auto; }
         textarea { width: 100%; height: 200px; margin-top: 5px; font-family: monospace; }
@@ -26,7 +26,7 @@
     <textarea id="xmlOutput" placeholder="Hier erscheint das generierte XML..."></textarea>
 
     <script>
-        const anmoInput = document.getElementById('transkript');
+        const transkriptInput = document.getElementById('transkript');
         const xmlOutput = document.getElementById('xmlOutput');
         const charCount = document.getElementById('charCount');
 
