--- a/index.html
+++ b/index.html
@@ -2,45 +2,44 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Modulares Analyse-Tool – Transkript & Anmoderation</title>
+  <title>Analyse-Tool für TV-Beiträge (Finale XML mit KI-Anweisung)</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 960px;
-      margin: auto;
-      padding: 20px;
-    }
-    textarea {
-      width: 100%;
-      height: 180px;
-      font-family: monospace;
-      margin-top: 5px;
-    }
-    .analyse-block {
-      margin-bottom: 30px;
-      border-top: 1px solid #ccc;
-      padding-top: 20px;
-    }
-    .button-group {
-      margin-top: 10px;
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-    }
-    select {
-      margin-top: 10px;
-      font-size: 14px;
-    }
-    label span {
-      font-weight: normal;
-      font-size: 14px;
-      margin-left: 10px;
-      color: #555;
-    }
+    body { font-family: Arial, sans-serif; max-width: 960px; margin: auto; padding: 20px; }
+    textarea { width: 100%; height: 160px; font-family: monospace; margin-top: 5px; }
+    select, input[type="text"] { width: 100%; margin-top: 5px; padding: 6px; }
+    .analyse-block { margin-bottom: 30px; border-top: 1px solid #ccc; padding-top: 20px; }
+    .button-group { margin-top: 10px; display: flex; gap: 10px; flex-wrap: wrap; }
+    label span { font-weight: normal; font-size: 14px; margin-left: 10px; color: #555; }
   </style>
 </head>
 <body>
-  <h1>Modulares Analyse-Tool für TV-Beiträge</h1>
+  <h1>Analyse-Tool für Transkript & Anmoderation</h1>
+
+  <label for="beitragstitel">Beitragstitel:</label>
+  <input type="text" id="beitragstitel" placeholder="z. B. Sanierung des Großherzoglichen Palais" />
+
+  <label for="ressort">Ressort:</label>
+  <select id="ressort">
+    <option value="">– Bitte wählen –</option>
+    <option>Politik</option>
+    <option>Wirtschaft</option>
+    <option>Kultur</option>
+    <option>Sport</option>
+    <option>Wissen</option>
+    <option>Gesellschaft</option>
+    <option>Panorama</option>
+    <option>Digitales</option>
+    <option>Verbraucher</option>
+    <option>Gesundheit</option>
+    <option>Bildung</option>
+    <option>Umwelt</option>
+    <option>Verkehr</option>
+    <option>Justiz</option>
+    <option>Ausland</option>
+  </select>
+
+  <label for="tags">Tags (kommagetrennt):</label>
+  <input type="text" id="tags" placeholder="z. B. Sanierung, Denkmal, Neustrelitz, Hotel" />
 
   <!-- TRANSKRIPT -->
   <div class="analyse-block">
@@ -56,10 +55,6 @@
       <option value="75">75 %</option>
       <option value="100">100 %</option>
     </select>
-
-    <div class="button-group">
-      <button onclick="updateCharCount('transkript')">Analyse generieren</button>
-    </div>
   </div>
 
   <!-- ANMODERATION -->
@@ -76,15 +71,11 @@
       <option value="75">75 %</option>
       <option value="100">100 %</option>
     </select>
-
-    <div class="button-group">
-      <button onclick="updateCharCount('anmoderation')">Analyse generieren</button>
-    </div>
   </div>
 
-  <!-- FINALE XML AUSGABE -->
+  <!-- FINALE XML -->
   <h2>3. Finale XML-Ausgabe</h2>
-  <textarea id="finalXml" placeholder="Hier erscheint die finale XML-Ausgabe..."></textarea>
+  <textarea id="finalXml" placeholder="Hier erscheint das finale XML..."></textarea>
   <div class="button-group">
     <button onclick="copyToClipboard()">In Zwischenablage kopieren</button>
     <button onclick="downloadXML()">XML herunterladen</button>
@@ -118,34 +109,51 @@
         .replace(/'/g, "&apos;");
     }
 
+    function generateTimestamp() {
+      const now = new Date();
+      return now.toLocaleDateString("de-DE") + " " + now.toLocaleTimeString("de-DE");
+    }
+
     function generateFinalXML() {
+      const titel = escapeXml(document.getElementById("beitragstitel").value.trim());
+      const ressort = escapeXml(document.getElementById("ressort").value);
+      const tags = escapeXml(document.getElementById("tags").value.trim());
+
       const transkript = escapeXml(transkriptInput.value.trim());
       const anmoderation = escapeXml(anmoderationInput.value.trim());
       const weightT = document.getElementById("weightTranskript").value;
       const weightA = document.getElementById("weightAnmoderation").value;
 
+      const timestamp = generateTimestamp();
+
       const xml = `<?xml version="1.0" encoding="UTF-8"?>
 <online-ausgabe version="1.0">
   <quelle>
+    <id>beitrag-${timestamp}</id>
     <art>TV-Beitrag</art>
+    <titel>${titel}</titel>
+    <themenvorgabe>
+      <ressort>${ressort}</ressort>
+      <tags>${tags}</tags>
+    </themenvorgabe>
     <analysearten>
       <transkript gewichtung="${weightT}">
         <originaltext>${transkript}</originaltext>
         <analyse>
-          <schritt nummer="2"><beschreibung>Zentrale Fakten</beschreibung></schritt>
-          <schritt nummer="3"><beschreibung>Zentrales Thema</beschreibung></schritt>
-          <schritt nummer="4"><beschreibung>Informative Absicht</description></schritt>
-          <schritt nummer="5"><beschreibung>Beteiligte Personen/Institutionen</description></schritt>
+          <schritt nummer="2">Zentrale Fakten</schritt>
+          <schritt nummer="3">Zentrales Thema</schritt>
+          <schritt nummer="4">Informative Absicht</schritt>
+          <schritt nummer="5">Beteiligte Personen oder Institutionen</schritt>
         </analyse>
       </transkript>
       <anmoderation gewichtung="${weightA}">
         <originaltext>${anmoderation}</originaltext>
         <analyse>
-          <schritt nummer="2"><beschreibung>Sprachlich-inhaltliche Analyse</beschreibung></schritt>
-          <schritt nummer="3"><beschreibung>Zentrale Fakten</description></schritt>
-          <schritt nummer="4"><beschreibung>Zentrales Thema</description></schritt>
-          <schritt nummer="5"><beschreibung>Informative Absicht</description></schritt>
-          <schritt nummer="6"><beschreibung>Prognose: Worum könnte es gehen?</description></schritt>
+          <schritt nummer="2">Sprachlich-inhaltliche Analyse</schritt>
+          <schritt nummer="3">Zentrale Fakten</schritt>
+          <schritt nummer="4">Zentrales Thema</schritt>
+          <schritt nummer="5">Informative Absicht</schritt>
+          <schritt nummer="6">Prognose: Worum könnte es im Beitrag gehen?</schritt>
         </analyse>
       </anmoderation>
     </analysearten>
