index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -2,18 +2,36 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Analyse-Tool für TV-Beiträge (Finale XML mit KI-Anweisung)</title>
+  <title>Analyse-Tool – Finale XML mit KI-Anweisung</title>
   <style>
     body { font-family: Arial, sans-serif; max-width: 960px; margin: auto; padding: 20px; }
-    textarea { width: 100%; height: 160px; font-family: monospace; margin-top: 5px; }
-    select, input[type="text"] { width: 100%; margin-top: 5px; padding: 6px; }
+    textarea, select, input[type="text"] {
+      width: 100%; margin-top: 5px; padding: 6px; font-family: monospace;
+    }
+    textarea { height: 160px; }
     .analyse-block { margin-bottom: 30px; border-top: 1px solid #ccc; padding-top: 20px; }
     .button-group { margin-top: 10px; display: flex; gap: 10px; flex-wrap: wrap; }
     label span { font-weight: normal; font-size: 14px; margin-left: 10px; color: #555; }
+    h2 { margin-top: 40px; }
   </style>
 </head>
 <body>
   <h1>Analyse-Tool für Transkript & Anmoderation</h1>
+
+  <label for="kiInstruction">KI-Anweisung (fest eingebettet, editierbar):</label>
+  <textarea id="kiInstruction">
+Bitte analysiere dieses XML vollständig. 
+1. Arbeite alle Analyse-Schritte 2–6 jeder Analyseart (Transkript und Anmoderation) aus.
+2. Verwende die Ergebnisse dieser Analysen zur Erstellung folgender redaktioneller Online-Elemente:
+   - Überschrift (max. 60 Zeichen, klare Keywords, keine Füllwörter)
+   - Kurzbeschreibung (max. 150 Zeichen, mit klarer Aussage)
+   - SEO-Keywords (max. 10, thematisch relevant, trennscharf)
+   - SEO-Themen (max. 5, übergeordnete Themenfelder)
+3. Gib die Ergebnisse doppelt aus:
+   a) als Vorschau-HTML (lesefreundlich, strukturiert in Boxen)
+   b) als textbasierte Vorschau mit klaren Zwischenüberschriften
+Vermeide CDATA und halte dich an die Ausgabevorgaben in den XML-Attributen.
+  </textarea>
 
   <label for="beitragstitel">Beitragstitel:</label>
   <input type="text" id="beitragstitel" placeholder="z. B. Sanierung des Großherzoglichen Palais" />
@@ -41,9 +59,8 @@
   <label for="tags">Tags (kommagetrennt):</label>
   <input type="text" id="tags" placeholder="z. B. Sanierung, Denkmal, Neustrelitz, Hotel" />
 
-  <!-- TRANSKRIPT -->
   <div class="analyse-block">
-    <h2>1. Transkript</h2>
+    <h2>Transkript</h2>
     <label for="transkript">Text <span id="charCountTranskript">0 Zeichen</span></label>
     <textarea id="transkript" placeholder="Geben Sie hier das Transkript ein..."></textarea>
 
@@ -57,9 +74,8 @@
     </select>
   </div>
 
-  <!-- ANMODERATION -->
   <div class="analyse-block">
-    <h2>2. Anmoderation</h2>
+    <h2>Anmoderation</h2>
     <label for="anmoderation">Text <span id="charCountAnmoderation">0 Zeichen</span></label>
     <textarea id="anmoderation" placeholder="Geben Sie hier die Anmoderation ein..."></textarea>
 
@@ -73,8 +89,7 @@
     </select>
   </div>
 
-  <!-- FINALE XML -->
-  <h2>3. Finale XML-Ausgabe</h2>
+  <h2>Finale XML-Ausgabe</h2>
   <textarea id="finalXml" placeholder="Hier erscheint das finale XML..."></textarea>
   <div class="button-group">
     <button onclick="copyToClipboard()">In Zwischenablage kopieren</button>
@@ -83,22 +98,7 @@
   </div>
 
   <script>
-    const transkriptInput = document.getElementById("transkript");
-    const anmoderationInput = document.getElementById("anmoderation");
     const finalXmlOutput = document.getElementById("finalXml");
-
-    transkriptInput.addEventListener("input", () => updateCharCount("transkript"));
-    anmoderationInput.addEventListener("input", () => updateCharCount("anmoderation"));
-
-    function updateCharCount(type) {
-      const input = document.getElementById(type);
-      const count = input.value.length;
-      document.getElementById("charCount" + capitalize(type)).textContent = `${count} Zeichen`;
-    }
-
-    function capitalize(str) {
-      return str.charAt(0).toUpperCase() + str.slice(1);
-    }
 
     function escapeXml(unsafe) {
       return unsafe
@@ -111,25 +111,36 @@
 
     function generateTimestamp() {
       const now = new Date();
-      return now.toLocaleDateString("de-DE") + " " + now.toLocaleTimeString("de-DE");
+      const d = now.toLocaleDateString("de-DE");
+      const t = now.toLocaleTimeString("de-DE");
+      return `${d} ${t}`;
     }
 
+    function updateCharCount(id) {
+      const count = document.getElementById(id).value.length;
+      document.getElementById("charCount" + id.charAt(0).toUpperCase() + id.slice(1)).textContent = `${count} Zeichen`;
+    }
+
+    document.getElementById("transkript").addEventListener("input", () => updateCharCount("transkript"));
+    document.getElementById("anmoderation").addEventListener("input", () => updateCharCount("anmoderation"));
+
     function generateFinalXML() {
+      const id = "beitrag-" + generateTimestamp();
       const titel = escapeXml(document.getElementById("beitragstitel").value.trim());
       const ressort = escapeXml(document.getElementById("ressort").value);
       const tags = escapeXml(document.getElementById("tags").value.trim());
 
-      const transkript = escapeXml(transkriptInput.value.trim());
-      const anmoderation = escapeXml(anmoderationInput.value.trim());
+      const kiInstruction = escapeXml(document.getElementById("kiInstruction").value.trim());
+      const transkript = escapeXml(document.getElementById("transkript").value.trim());
+      const anmoderation = escapeXml(document.getElementById("anmoderation").value.trim());
       const weightT = document.getElementById("weightTranskript").value;
       const weightA = document.getElementById("weightAnmoderation").value;
 
-      const timestamp = generateTimestamp();
-
       const xml = `<?xml version="1.0" encoding="UTF-8"?>
 <online-ausgabe version="1.0">
+  <anweisung-fuer-ki>${kiInstruction}</anweisung-fuer-ki>
   <quelle>
-    <id>beitrag-${timestamp}</id>
+    <id>${id}</id>
     <art>TV-Beitrag</art>
     <titel>${titel}</titel>
     <themenvorgabe>
